View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029679 | Community | OCCT:DRAW | public | 2018-04-08 06:19 | 2019-07-08 12:58 |
Reporter | zale_lzj | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2012 | ||
Product Version | 7.2.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0029679: Draw Harness - Command 2dapprox works wrong when giving points in command line | ||||
Description | If use command like this, "2dapprox c 5 0 0 3 4 -1 4 -4 0 -4 -3", It won't be identified as have input of points. (the variable hasPoints keep false when the condition of nc == 2*Nb). In the result the command raises exception. | ||||
Steps To Reproduce | 2dapprox c 5 0 0 3 4 -1 4 -4 0 -4 -3 | ||||
Tags | No tags attached. | ||||
Test case number | lowalgos 2dapprox bug29679_1, bug29679_2 | ||||
|
Duplicated file GeometryTest_API2dCommands.cxx has been removed by patch for 0030366. |
|
Branch CR29679 has been created by msv. SHA-1: 8fd46ee6dd5de0d2dcdec7d4bb5604fa5b460c21 Detailed log of new commits: Author: msv Date: Fri Jun 21 20:35:30 2019 +0300 0029679: Command 2dapprox works wrong when giving points in command line Correct the behavior of the command 2dapprox for the case of points input in the command line. Restore the work of the command 2dinterpole (implemented in the same method as 2dapprox). Add test cases. Correct generation of snapshots for the tests lowalgos/2dinter/bug4426_*. |
|
Please review the patch. Test results are http://jenkins-test-12.nnov.opencascade.com/view/CR29679-master-MSV/view/COMPARE/ |
|
Branch CR29679 has been updated forcibly by msv. SHA-1: 0e41b11832218836311249271536b94872fd5e52 |
|
Reviewed. |
|
Combination - OCCT branch : CR29679 master SHA - 0e41b11832218836311249271536b94872fd5e52 d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : master SHA - c08b242c9da615bfdf83ca463321740d4cc22898 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16193.860000000062 / 16165.540000000055 [+0.18%] Products Total CPU difference: 10490.580000000042 / 10470.440000000042 [+0.19%] Windows-64-VC14: OCCT Total CPU difference: 17619.859375 / 17617.546875 [+0.01%] Products Total CPU difference: 12125.453125 / 12111.125 [+0.12%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29679 has been deleted by inv. SHA-1: 0e41b11832218836311249271536b94872fd5e52 |
occt: master 64a44752 2019-06-21 17:35:30
Committer: apn Details Diff |
0029679: Draw Harness - Command 2dapprox works wrong when giving points in command line Correct the behavior of the command 2dapprox for the case of points input in the command line. Restore the work of the command 2dinterpole (implemented in the same method as 2dapprox). Add test cases. Correct generation of snapshots for the tests lowalgos/2dinter/*. |
Affected Issues 0029679 |
|
mod - dox/user_guides/draw_test_harness/draw_test_harness.md | Diff File | ||
mod - src/GeomliteTest/GeomliteTest_API2dCommands.cxx | Diff File | ||
add - tests/lowalgos/2dapprox/bug29679_1 | Diff File | ||
add - tests/lowalgos/2dapprox/bug29679_2 | Diff File | ||
mod - tests/lowalgos/2dinter/bug23587 | Diff File | ||
mod - tests/lowalgos/2dinter/bug24800 | Diff File | ||
mod - tests/lowalgos/2dinter/bug4426_1 | Diff File | ||
mod - tests/lowalgos/2dinter/bug4426_2 | Diff File | ||
mod - tests/lowalgos/grids.list | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-04-08 06:19 | zale_lzj | New Issue | |
2018-04-08 06:19 | zale_lzj | Assigned To | => apn |
2019-03-02 22:47 | kgv | Relationship added | duplicate of 0030366 |
2019-03-02 22:49 | kgv | Note Added: 0082534 | |
2019-03-02 22:49 | kgv | Assigned To | apn => msv |
2019-06-21 19:03 |
|
Summary | Repeated registration commands(2dapprox), and will wrong when 2dapprox result nbpoint x1 y1 x2 y2 ... => Command 2dapprox works wrong when giving points in command line |
2019-06-21 19:03 |
|
Description Updated | |
2019-06-21 19:04 |
|
Relationship deleted | 0030366 |
2019-06-21 19:04 |
|
Relationship added | related to 0030366 |
2019-06-21 19:04 |
|
Status | new => assigned |
2019-06-21 19:04 |
|
Target Version | => 7.4.0 |
2019-06-21 19:05 |
|
Steps to Reproduce Updated | |
2019-06-21 20:37 | git | Note Added: 0085211 | |
2019-06-21 20:40 |
|
Note Added: 0085212 | |
2019-06-21 20:40 |
|
Assigned To | msv => emv |
2019-06-21 20:40 |
|
Status | assigned => resolved |
2019-06-21 20:51 | git | Note Added: 0085213 | |
2019-06-21 23:37 | kgv | Summary | Command 2dapprox works wrong when giving points in command line => Draw Harness - Command 2dapprox works wrong when giving points in command line |
2019-06-24 11:12 |
|
Note Added: 0085244 | |
2019-06-24 11:12 |
|
Assigned To | emv => bugmaster |
2019-06-24 11:12 |
|
Status | resolved => reviewed |
2019-06-24 12:11 | apn | Test case number | => lowalgos 2dapprox bug29679_1, bug29679_2 |
2019-06-24 12:13 | apn | Note Added: 0085251 | |
2019-06-24 12:13 | apn | Status | reviewed => tested |
2019-07-01 17:28 | apn | Changeset attached | => occt master 64a44752 |
2019-07-01 17:28 | apn | Assigned To | bugmaster => apn |
2019-07-01 17:28 | apn | Status | tested => verified |
2019-07-01 17:28 | apn | Resolution | open => fixed |
2019-07-08 12:58 | git | Note Added: 0085482 |